[tool.poetry]
authors = ["Noshita, Koji <noshita@morphometrics.jp>"]
description = ""
license = "CC-BY-SA-4.0"
name = "theoretical-morphology-examples"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.3.3"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
python = ">=3.10, <3.12"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
